--- a/build.gradle
+++ b/build.gradle
@@ -24,5 +24,6 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
